--- a/styles.css
+++ b/styles.css
@@ -52,12 +52,16 @@
 	background-color: rgba(255, 241, 216, 0.538);
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 90px;
 }
 
 .button-container {
 	grid-row: 3 / 3;
 	background-color: rgba(223, 255, 239, 0.908);
+    justify-content: center;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
 }
 .img-container {
 	height: 100%;
@@ -105,4 +109,175 @@
 
 a {
 	color: rgb(0, 200, 255);
+}
+
+#project-credit {
+    position: absolute;
+    bottom: 0;
+    right: 150px;
+    font-size: .8rem;
+}
+
+#acc-exist-text {
+    justify-self: center;
+    grid-row: 1 / 1;
+    margin-top: 75px;
+    grid-column: 1 / 1;
+}
+
+#submit {
+    width: 150px;
+    height: 35px;
+    font-size: 1.2rem;
+    background-color: rgb(6, 87, 71);
+    border-radius: 10px;
+    margin-top: 25px;
+    color: white;
+    justify-self: center;
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
+}
+
+.pmessage-container {
+    grid-row: 3 / 3;
+    grid-column: 1 / 3;
+    text-align: center;
+}
+
+.invalid {
+    color: red;
+}
+
+.invalid2 {
+    border-color: red;
+}
+
+.valid {
+    color: green;
+}
+
+.valid2 {
+    border-color: green;
+}
+form {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3 ;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 33% 33% 33%;
+}
+
+.fname {
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+    margin-left: 95px;
+    margin-top: 10px;
+    font-weight: 600;
+    
+}
+
+#fname {
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
+    height: 25px;
+    margin-top: 30px;
+    margin-left: 95px;
+    width: 150px;
+    border-color: white;
+}
+
+.lname {
+    grid-column: 2 / 2;
+    grid-row: 1 / 1;
+    margin-left: 30px;
+    margin-top: 10px;
+    font-weight: 600;
+}
+#lname {
+    grid-row: 1 / 1;
+    grid-column: 2 / 2;
+    height: 25px;
+    margin-top: 30px;
+    margin-left: 30px;
+    width: 150px;
+    border-color: white;
+}
+
+.email {
+    grid-column: 1 / 3;
+    grid-row: 2 / 2;
+    margin-top: 10px;
+    font-weight: 600;
+    margin-left: 206px;
+    
+}
+
+#email {
+    grid-column: 1 / 3;
+    grid-row: 2 / 2;
+    margin-top: 30px;
+    width: 150px;
+    height: 25px;
+    border-color: white;
+    justify-self: center;
+}
+
+.npassword{
+    grid-column: 1 / 1;
+    grid-row: 3 / 3;
+    margin-left: 95px;
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+#npassword {
+    grid-row: 3 / 3;
+    grid-column: 1 / 1;
+    height: 25px;
+    margin-top: 30px;
+    margin-left: 95px;
+    width: 150px;
+    
+}
+
+.cpassword {
+    grid-column: 2 / 2;
+    grid-row: 3 / 3;
+    margin-left: 30px;
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+#cpassword {
+    grid-row: 3 / 3;
+    grid-column: 2 / 2;
+    height: 25px;
+    margin-top: 30px;
+    margin-left: 30px;
+    width: 150px;
+    
+}
+#submit:hover {
+    background-color: rgb(28, 153, 126);
+}
+
+.hidden {
+    display: none;
+}
+
+.passwordvisibility {
+    grid-row: 3 / 3;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    right: 275px;
+    top: 30px;
+    background: none;
+    border: none;
+}
+
+
+
+i:hover {
+    color: rgb(110, 110, 110);
 }
