--- a/styles.css
+++ b/styles.css
@@ -4,56 +4,98 @@
 	padding: 0;
 }
 
+body {
+    height: 100vh;
+    width: 100vw;
+}
 .wrapper1 {
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	display: grid;
 	grid-template-columns: 45% 55%;
+    grid-template-rows: auto;
+
 }
 
 .container1 {
 	grid-column: 1 / 1;
+    display: grid;
+    grid-template-rows: 1fr 1fr 25px;
+    grid-template-columns: 50% 50%;
 }
+.background-img{
+	width: 100%;
+    height: 100%;
+    grid-row: 1 / 4;
+    grid-column: 1 / 3;
+}
+
+
+
+.logo-container {
+	grid-row: 1 / 2;
+    grid-column: 1 / 3;
+	background: rgba(0, 0, 0, 0.223);
+	width: 100%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 1fr auto auto 1fr;
+    align-self: center;
+    margin-top: 12%;
+}
+.logo {
+	height: 90px;
+	width: 80px;
+    grid-column: 2;
+    margin-right: 2vw;
+    
+}
+.logo-text {
+	color: white;
+	font-size: 5rem;
+	font-family: 'Cabin Sketch', sans-serif;
+    grid-column: 3;
+    align-self: center;
+    justify-self: center;
+}
+
+.img-credit {
+	grid-row: 3;
+    grid-column: 1 / 3;
+    justify-self: center;
+	font-size: .65rem;
+    color: white;
+    margin-top: auto;
+}
+
+a {
+	color: rgb(0, 200, 255);
+}
+
 .container2 {
 	grid-column: 2 / 2;
 	display: grid;
-	grid-template-rows: 33% 33% 1fr;
+	grid-template-rows: 33% 1fr 1fr;
+    grid-template-columns: auto;
 	width: 100%;
 }
 
 .heading-container {
-	grid-row: 1 / 1;
+	grid-row: 1;
 	background-color: rgba(223, 255, 239, 0.908);
-	display: flex;
+	display: grid;
 	align-items: center;
-	height: 100%;
+    justify-items: center;
+	
 }
 
 .heading-text {
 	color: rgb(0, 0, 0);
-	font-size: 1.8rem;
-	text-align: left;
-	padding-left: 10px;
-	margin-left: 25px;
-	margin-right: 25px;
+	font-size: 1.5rem;
+    width: 90%;
+    margin-left: 25px;
 }
 
-.form-text {
-	font-size: 1.8rem;
-	color: rgb(0, 0, 0);
-	grid-column: 1 / 3;
-	grid-row: 1 / 1;
-	text-align: center;
-    margin-top: 10px;
-}
-.forms-container {
-	border: 1px solid black;
-	grid-row: 2 / 2;
-	background-color: rgba(255, 241, 216, 0.538);
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr 90px;
-}
 
 .button-container {
 	grid-row: 3 / 3;
@@ -63,58 +105,11 @@
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
 }
-.img-container {
-	height: 100%;
-	width: 100%;
-}
 
-.background {
-	width: 100%;
-	height: 100%;
-	z-index: -1;
-}
 
-.logo {
-	position: relative;
-	top: 10px;
-	left: 65px;
-	height: 100px;
-	width: 90px;
-}
-
-.logo-container {
-	position: absolute;
-	top: 240px;
-	background: rgba(0, 0, 0, 0.223);
-	width: 45%;
-}
-.logo-text {
-	color: white;
-	position: relative;
-	font-size: 5rem;
-	left: 85px;
-	bottom: 10px;
-	font-family: 'Cabin Sketch', sans-serif;
-}
-
-.img-credit {
-	position: absolute;
-	z-index: 99;
-	left: 15%;
-	bottom: 0%;
-	height: auto;
-	color: white;
-	font-size: 10px;
-}
-
-a {
-	color: rgb(0, 200, 255);
-}
 
 #project-credit {
-    position: absolute;
-    bottom: 0;
-    right: 150px;
+    justify-self: center;
     font-size: .8rem;
 }
 
@@ -137,9 +132,24 @@ a {
     grid-row: 1 / 1;
     grid-column: 1 / 1;
 }
+.forms-container {
+	grid-row: 2;
+	background-color: rgba(255, 241, 216, 0.538);
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: auto 1fr 90px;
+}
+.form-text {
+	font-size: 1.6rem;
+	color: rgb(0, 0, 0);
+	grid-column: 1 / 3;
+	grid-row: 1;
+	text-align: center;
+    margin-top: 10px;
+}
 
 .pmessage-container {
-    grid-row: 3 / 3;
+    grid-row: 3 ;
     grid-column: 1 / 3;
     text-align: center;
 }
@@ -163,14 +173,15 @@ form {
     grid-column: 1 / 3;
     grid-row: 2 / 3 ;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 33% 33% 33%;
 }
 
 .fname {
-    grid-column: 1 / 1;
-    grid-row: 1 / 1;
-    margin-left: 95px;
+    grid-column: 1;
+    grid-row: 1;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
     font-weight: 600;
     
@@ -181,79 +192,88 @@ form {
     grid-column: 1 / 1;
     height: 25px;
     margin-top: 30px;
-    margin-left: 95px;
+    margin-left: auto;
+    margin-right: auto;
     width: 150px;
     border-color: white;
 }
 
 .lname {
-    grid-column: 2 / 2;
-    grid-row: 1 / 1;
-    margin-left: 30px;
+    grid-column: 2;
+    grid-row: 1;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
     font-weight: 600;
 }
 #lname {
-    grid-row: 1 / 1;
-    grid-column: 2 / 2;
+    grid-row: 1;
+    grid-column: 2 ;
     height: 25px;
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
     width: 150px;
     border-color: white;
 }
 
 .email {
     grid-column: 1 / 3;
-    grid-row: 2 / 2;
+    grid-row: 2;
     margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     font-weight: 600;
-    margin-left: 206px;
     
 }
 
 #email {
     grid-column: 1 / 3;
-    grid-row: 2 / 2;
+    grid-row: 2;
     margin-top: 30px;
     width: 150px;
     height: 25px;
     border-color: white;
-    justify-self: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .npassword{
-    grid-column: 1 / 1;
-    grid-row: 3 / 3;
-    margin-left: 95px;
+    grid-column: 1;
+    grid-row: 3;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
     font-weight: 600;
 }
 
 #npassword {
-    grid-row: 3 / 3;
-    grid-column: 1 / 1;
+    grid-row: 3;
+    grid-column: 1;
     height: 25px;
     margin-top: 30px;
-    margin-left: 95px;
+    margin-left: auto;
+    margin-right: auto;
     width: 150px;
     
 }
 
 .cpassword {
-    grid-column: 2 / 2;
-    grid-row: 3 / 3;
-    margin-left: 30px;
+    grid-column: 2;
+    grid-row: 3;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
     font-weight: 600;
 }
 
 #cpassword {
-    grid-row: 3 / 3;
-    grid-column: 2 / 2;
+    grid-row: 3;
+    grid-column: 2;
     height: 25px;
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
     width: 150px;
     
 }
@@ -266,14 +286,14 @@ form {
 }
 
 .passwordvisibility {
-    grid-row: 3 / 3;
+    grid-row: 3 ;
+    grid-column: 1 / 3;
     width: 30px;
     height: 30px;
-    position: relative;
-    right: 275px;
-    top: 30px;
     background: none;
     border: none;
+    justify-self: center;
+    margin-top: 30px;
 }
 
 
